--- a/ApplicationLogging.Adapters.Log4Net.nuspec
+++ b/ApplicationLogging.Adapters.Log4Net.nuspec
@@ -16,11 +16,12 @@
     <repository type="git" url="https://github.com/alastairwyse/ApplicationLogging.Adapters.Log4Net/" />
     <dependencies>
       <group targetFramework=".NETStandard2.0">
+        <dependency id=" ApplicationLogging" version="2.0.0" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
   <files>
-    <file src=".\ApplicationLogging.Adapters.Log4Net\bin\Debug\netstandard2.0\ApplicationLogging.Adapters.Log4Net.dll" target="lib\netstandard2.0\ApplicationLogging.Adapters.Log4Net.dll" />
-    <file src=".\ApplicationLogging.Adapters.Log4Net\bin\Debug\netstandard2.0\ApplicationLogging.Adapters.Log4Net.xml" target="lib\netstandard2.0\ApplicationLogging.Adapters.Log4Net.xml" />
+    <file src=".\ApplicationLogging.Adapters.Log4Net\bin\Release\netstandard2.0\ApplicationLogging.Adapters.Log4Net.dll" target="lib\netstandard2.0\ApplicationLogging.Adapters.Log4Net.dll" />
+    <file src=".\ApplicationLogging.Adapters.Log4Net\bin\Release\netstandard2.0\ApplicationLogging.Adapters.Log4Net.xml" target="lib\netstandard2.0\ApplicationLogging.Adapters.Log4Net.xml" />
   </files>
 </package>
